--- a/surveyjs-aspnet-mvc.csproj
+++ b/surveyjs-aspnet-mvc.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Surveys\New Text Document.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
